Three new pages, updated Moon and star pages, responsive images tweak, tables can scroll

--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -8,7 +8,7 @@ link: ceres
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
-                        <p class="caption">Ceres</p>
+                        <p class="caption">Ceres as seen by Dawn</p>
                     </div>
                     <p class="paragraph">
                         Ceres is the biggest of the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">asteroid belt</a> and is the only <a href="dwarf-planet.html">dwarf planet</a> in the belt. 
