--- a/pages/enceladus.html
+++ b/pages/enceladus.html
@@ -8,7 +8,7 @@ link: enceladus
                 <div class="articlediv">
                     <div class="captionbox right">
                         <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="236" height="240">
-                        <p class="caption">Enceladus</p>
+                        <p class="caption">Enceladus as seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
                         Enceladus is the sixth biggest <a href="natural-satellite.html">moon</a> of <a href="saturn.html">Saturn</a>.
