--- a/pages/europa.html
+++ b/pages/europa.html
@@ -6,17 +6,19 @@ link: europa
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa">
                         <p class="caption">Europa</p>
                     </div>
                     <p class="paragraph">
                         Europa is the smallest of the four <a href="satellites-of-jupiter.html">Galilean moon</a> and is slightly smaller than <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a>.
                         It was discovered by Galileo Galilei in 1610 and is named after the mother of King Minos of Crete and lover of Zeus from Greek mythology.
+                    </p>
+                    <p class="paragraph">
                         It's icy surface is smooth, full of dark streaks and has hardly any craters.
                         It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
-                        This is similar to <a href="ganymede.html">Ganymede</a> and <a href="callisto.html">Callisto</a>, but there are more evidences showing such ocean on Europa than on the other two moons and the possibility of life there is more promising on theory due to number of factors.
-                        A similar satellite is <a href="saturn.html">Saturn</a>'s <a href="natural-satellite.html">moon</a> <a href="enceladus.html">Enceladus</a>, which also has a smooth and icy surface and an active, tidally heated interior.
+                        This is also the case on <a href="ganymede.html">Ganymede</a> and <a href="callisto.html">Callisto</a>, but the ocean of Europa shapes the surface more actively than on the other two moons and the possibility of life there is more promising on theory due to number of factors.
+                        A similar satellite is <a href="saturn.html">Saturn</a>'s <a href="natural-satellite.html">moon</a> <a href="enceladus.html">Enceladus</a>, which also has a smooth and icy surface, an active, tidally heated interior, and a direct contact between the rocky core and the liquid ocean.
                         The orbiter Europa Clipper by NASA that was launched in 2024 is planned to study the Europan surface.
                     </p>
                 </div>
@@ -75,8 +77,8 @@ link: europa
                 <p class="paragraph">
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:482px">
-                        <img class="articleimage" src="../assets/images/diagrams/plate-tectonics-on-europa.jpg" alt="Plate tectonics on Europa" width="480" height="298.5">
+                    <div class="captionbox right h300">
+                        <img class="articleimage" src="../assets/images/diagrams/plate-tectonics-on-europa.jpg" alt="Plate tectonics on Europa">
                         <p class="caption">Plate tectonics on Europa</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
@@ -90,8 +92,8 @@ link: europa
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:322px">
-                        <img class="articleimage" src="../assets/images/features/conamara-chaos.jpg" alt="Conamara Chaos" width="320" height="144">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/features/conamara-chaos.jpg" alt="Conamara Chaos">
                         <p class="caption">Enhanced color image of Conamara Chaos, an example of chaotic terrain on Europa</p>
                     </div>
                     <p class="paragraph">
@@ -119,8 +121,8 @@ link: europa
                     More recently, NASA’s Cassini, New Horizons, and Juno spacecraft have made distant observations on Europa.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:332px">
-                        <img class="articleimage" src="../assets/images/spacecrafts/europa-clipper.png" alt="Europa Clipper" width="330" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/spacecrafts/europa-clipper.png" alt="Europa Clipper">
                         <p class="caption">Europa Clipper, a NASA spacecraft</p>
                     </div>
                     <h3 class="paragraphsubheader" id="FutureMissions">Future missions</h3>
@@ -131,7 +133,7 @@ link: europa
                         The mission aims to determine the thickness of the ice, the depth and salinity of the ocean, and the potential habitability of Europa’s hidden environment.
                     </p>
                     <p class="paragraph">
-                        In addition to Europa Clipper, the ESA has launched the Jupiter Icy Moons Explorer (JUICE) mission, which launched in April 2023 and is expected to reach Jupiter in 2031.
+                        In addition to Europa Clipper, the ESA has launched the Jupiter Icy Moons Explorer (JUICE) mission in April the previous year and is expected to reach Jupiter in 2031.
                         While JUICE’s primary targets is Ganymede, it will also perform flybys of Europa and Callisto, focusing on studying the moon’s surface, subsurface, and potential for habitability.
                     </p>
                 </div>
