--- a/pages/ganymede.html
+++ b/pages/ganymede.html
@@ -11,7 +11,7 @@ link: ganymede
                         <p class="caption">Ganymede</p>
                     </div>
                     <p class="paragraph">
-                        Ganymede is a natural <a href="natural-satellite.html">satellite</a> of <a href="Jupiter.html">Jupiter</a> and is the largest known satellite in the <a href="solar-system.html">Solar System</a>.
+                        Ganymede is a natural <a href="natural-satellite.html">satellite</a> of <a href="jupiter.html">Jupiter</a> and is the largest known satellite in the <a href="solar-system.html">Solar System</a>.
                         It is larger than the <a href="planet.html">planet</a> <a href="mercury.html">Mercury</a>, but is less massive.
                         It was discovered by Galileo in 1610 and is the third Galilean moon from Jupiter.
                         It is named after the Ganymede from Greek mythology, who was the only male lover of Zeus.
