--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -6,8 +6,8 @@ link: jupiter
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px;">
-                        <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter">
                         <p class="caption">Jupiter, seen by NASA's Hubble Space Telescope</p>
                     </div>
                     <p class="paragraph">
@@ -39,8 +39,8 @@ link: jupiter
                     In Vedic astrology, the planet is named after Brihaspati (बृहस्पति), the "guru of devas" or teacher of gods.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:197px;">
-                        <img class="articleimage" src="../assets/images/other/jupiter-timelapse.gif" alt="Jupiter timelapse" width="195" height="200">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/jupiter-timelapse.gif" alt="Jupiter timelapse">
                         <p class="caption">Timelapse of Jupiter over a month</p>
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
@@ -73,8 +73,8 @@ link: jupiter
                     Data collected by the Juno spacecraft suggests that Jupiter has a large and partially dissolved core.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/features/jupiter-great-red-spot.jpg" alt="Great Red Spot" width="320" height="209">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/jupiter-great-red-spot.jpg" alt="Great Red Spot">
                         <p class="caption">The Great Red Spot, image captured by Juno</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
@@ -115,8 +115,8 @@ link: jupiter
                     The biggest of them is Amalthea, and the most massive is Himalia.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede">
                         <p class="caption">Ganymede</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ganymede">Ganymede</h3>
@@ -131,8 +131,8 @@ link: jupiter
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto">
                         <p class="caption">Callisto</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Callisto">Callisto</h3>
@@ -144,8 +144,8 @@ link: jupiter
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io">
                         <p class="caption">Io</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Io">Io</h3>
@@ -159,8 +159,8 @@ link: jupiter
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa">
                         <p class="caption">Europa</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Europa">Europa</h3>
@@ -210,8 +210,8 @@ link: jupiter
                     Eight other moons were discovered before the launch of the Voyager 1 spacecraft.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/spacecrafts/juno-orbiter.png" alt="Juno" width="225" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/spacecrafts/juno-orbiter.png" alt="Juno">
                         <p class="caption">Model of NASA's spacecraft Juno</p>
                     </div>
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
