--- a/pages/miranda.html
+++ b/pages/miranda.html
@@ -8,7 +8,7 @@ link: miranda
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda">
-                        <p class="caption">Miranda</p>
+                        <p class="caption">Miranda, seen by Voyager 2</p>
                     </div>
                     <p class="paragraph">
                         Miranda is the smallest of the round <a href="natural-satellite.html">moons</a> of <a href="uranus.html">Uranus</a>.
