--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -6,8 +6,8 @@ link: neptune
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune">
                         <p class="caption">Neptune as seen by Voyager 2, 1989</p>
                     </div>
                     <p class="paragraph">
@@ -100,8 +100,8 @@ link: neptune
                 </p>
                 <div class="articlediv">
                     </p>
-                    <div class="captionbox right" style="width:263px;">
-                        <img class="articleimage" src="../assets/images/features/neptune-spots.jpg" alt="Neptune spots" width="261" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/neptune-spots.jpg" alt="Neptune spots">
                         <p class="caption">Storms on Neptune at the time of Voyager 2's flyby - Great Dark Spot (top) and Small Dark Spot (bottom)</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Rings">Rings</h3>
@@ -125,8 +125,8 @@ link: neptune
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton">
                         <p class="caption">Triton, the largest Neptunian satellite</p>
                     </div>
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
