--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -26,12 +26,6 @@ link: pluto
                         One mission has visited Pluto - New Horizons.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    Pluto was named after the Roman god of the underworld, a suggestion made by an 11-year-old schoolgirl from Oxford, England.
-                    The name was officially chosen among a thousand suggestions and was officially adopted on May 1, 1930.
-                    The name stuck in part because the first two letters, PL, are the initials of Percival Lowell, who initiated the search for Pluto.
-                </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     In the 1840s, Urbain Le Verrier predicted the position of the then-undiscovered planet Neptune by using Newtonian mechanics after analyzing perturbations in the orbit of <a href="uranus.html">Uranus</a>.
@@ -55,19 +49,31 @@ link: pluto
                     This decision received considerable backlash, mostly on the basis of knowing Pluto as a planet for decades.
                     Big part of the astronomical community also met the decision with criticism.
                 </p>
-                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
-                    Pluto's orbit is highly elliptical (eccentricity of 0.249) and inclined (17°) compared to the planets, ranging from 30 to 49 AU from the Sun.
-                    A small section of its orbit lies closer to the Sun than Neptune's, but they do not intersect.
-                    It takes 247.94 <a href="earth.html">Earth</a> years for Pluto to complete one revolution around the Sun.
-                    It will complete its first orbit since its discovery in 2178.
-                    It is resonant with Neptune at a 2:3 resonance, one of many Kuiper belt objects called plutinos.
+                    Pluto was named after the Roman god of the underworld, a suggestion made by an 11-year-old schoolgirl from Oxford, England.
+                    The name was officially chosen among a thousand suggestions and was officially adopted on May 1, 1930.
+                    The name stuck in part because the first two letters, PL, are the initials of Percival Lowell, who initiated the search for Pluto.
                 </p>
-                <p class="paragraph">
-                    It takes 6.39 Earth days for Pluto to rotate around its axis.
-                    It has an axial tilt of 120 degrees, resulting in a retrogage rotation and extreme seasonal variations.
-                    This axis of rotation also lies outside Pluto because of the gravitaional pull of Charon, the biggest moon.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/other/pluto-charon-system.gif" alt="Pluto-Charon system">
+                        <p class="caption">Pluto and Charon orbiting around their common barycenter. <a href="https://commons.wikimedia.org/wiki/File:Pluto-Charon_system-new.gif">Source</a></p>
+                    </div>
+                    <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                    <p class="paragraph">
+                        Pluto's orbit is highly elliptical (eccentricity of 0.249) and inclined (17°) compared to the planets, ranging from 30 to 49 AU from the Sun.
+                        A small section of its orbit lies closer to the Sun than Neptune's, but they do not intersect.
+                        It takes 247.94 <a href="earth.html">Earth</a> years for Pluto to complete one revolution around the Sun.
+                        It will complete its first orbit since its discovery in 2178.
+                        It is resonant with Neptune at a 2:3 resonance, one of many Kuiper belt objects called plutinos.
+                    </p>
+                    <p class="paragraph">
+                        It takes 6.39 Earth days for Pluto to rotate around its axis.
+                        It has an axial tilt of 120 degrees, resulting in a retrogage rotation and extreme seasonal variations.
+                        This axis of rotation also lies outside Pluto because of the gravitaional pull of Charon, the biggest moon.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
                 <p class="paragraph">
