--- a/pages/titan.html
+++ b/pages/titan.html
@@ -8,7 +8,7 @@ link: titan
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan">
-                        <p class="caption">Titan</p>
+                        <p class="caption">Titan as seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
                         Titan is the biggest <a href="natural-satellite.html">satellite</a> orbiting <a href="saturn.html">Saturn</a> and is one of two satellites bigger than the <a href="planet.html">planet</a> <a href="mercury.html">Mercury</a>, the other being the <a href="jupiter.html">Jovian</a> moon <a href="ganymede.html">Ganymede</a>. 
