--- a/pages/triton.html
+++ b/pages/triton.html
@@ -8,7 +8,7 @@ link: triton
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton">
-                        <p class="caption">Triton</p>
+                        <p class="caption">Triton, seen by Voyager 2</p>
                     </div>
                     <p class="paragraph">
                         Triton is the biggest <a href="natural-satellite.html">satellite</a> of <a href="neptune.html">Neptune</a>.
