--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -6,8 +6,8 @@ link: uranus
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus">
                         <p class="caption">Uranus, Voyager 2</p>
                     </div>
                     <p class="paragraph">
@@ -49,8 +49,8 @@ link: uranus
                     This was mostly a coincidence, since the mystery planet between Mars and Jupiter turned out to be an entire region of many small bodies, collectively called the <a href="asteroid-belt.html">asteroid belt</a>, and Neptune, which was discovered afterwards, deviated from the expected position.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:197px;">
-                        <img class="articleimage" src="../assets/images/other/uranus-tilt.jpg" alt="Uranus axial tilt" width="195" height="287.25">
+                    <div class="captionbox right h300">
+                        <img class="articleimage" src="../assets/images/other/uranus-tilt.jpg" alt="Uranus axial tilt">
                         <p class="caption">Uranus and its rings, the axial tilt is almost parallel to the ecliptic, Hubble Space Telescope</p>
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
@@ -71,19 +71,19 @@ link: uranus
                         Uranus has a radius of 25,362 km, four times that of <a href="earth.html">Earth</a>.
                         Uranus is slightly larger than Neptune, but less massive.
                     </p>
+                     <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+                     <p class="paragraph">
+                         The standard model of the Uranian structure is that it consists of three layers: a silicate/metallic core, an icy (water, ammonia and methane) mantle and an outer gaseous hydrogen/helium atmosphere.
+                         The core is only half the size of Earth and comprises supercritical liquid iron, nickel and silicates.
+                         The surrounding mantle is made of supercritical volatiles.
+                         These volatiles, also called ices, are what makes Uranus an ice giant.
+                         Due to the high pressure and temperatures in the mantle, it is suggested that diamond rains appear.
+                         This process also appears on other giant planets.
+                     </p>
                 </div>
-                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
-                <p class="paragraph">
-                    The standard model of the Uranian structure is that it consists of three layers: a silicate/metallic core, an icy (water, ammonia and methane) mantle and an outer gaseous hydrogen/helium atmosphere.
-                    The core is only half the size of Earth and comprises supercritical liquid iron, nickel and silicates.
-                    The surrounding mantle is made of supercritical volatiles.
-                    These volatiles, also called ices, are what makes Uranus an ice giant.
-                    Due to the high pressure and temperatures in the mantle, it is suggested that diamond rains appear.
-                    This process also appears on other giant planets.
-                </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:306.5px;">
-                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus" width="304.5" height="360">
+                    <div class="captionbox right h360">
+                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus">
                         <p class="caption">Location of the rings of Uranus, its inner moons and Miranda</p>
                     </div>
                     <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
@@ -112,8 +112,8 @@ link: uranus
                 <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania">
                         <p class="caption">Titania, the biggest moon of Uranus</p>
                     </div>
                     <p class="paragraph">
