--- a/pages/iapetus.html
+++ b/pages/iapetus.html
@@ -8,7 +8,7 @@ link: iapetus
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus">
-                        <p class="caption">Iapetus</p>
+                        <p class="caption">Iapetus as seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
                         Iapetus is the third biggest <a href="natural-satellite.html">moon</a> of <a href="saturn.html">Saturn</a>.
