--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -6,8 +6,8 @@ link: mercury
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="242" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury">
                         <p class="caption">Mercury seen from MESSENGER</p>
                     </div>
                     <p class="paragraph">
@@ -67,8 +67,8 @@ link: mercury
                     The density of Mercury's materials is also greater than those of Earth's if gravitational compression isn't taken into consideration.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/features/caloris-planitia.png" alt="Caloris Planitia" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/caloris-planitia.png" alt="Caloris Planitia">
                         <p class="caption">Mercury's largest impact crater Caloris Planitia</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
