--- a/pages/star.html
+++ b/pages/star.html
@@ -21,6 +21,44 @@ link: star
                         During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.
                     </p>
                 </div>
+                <h2 class="paragraphheader" id="Observation">Observation</h2>
+                <p class="paragraph">
+                    Observation of the stars was done by people since prehistoric time.
+                    Early civilizations simplified regions of the night sky into constellations, which were used for navigation and tracking time, in particular the change of seasons.
+                    Stars also played a role in religious rituals and were part of different mythologies.
+                    Early civilizations like ancient Egypt and Babylon were some of the first to create star charts and star catalogues to help document the stars.
+                    Ancient Greece and China influenced their respective spheres of influence with their historical records and names of stars, constellations and the <a href="planet.html">planets</a>
+                    They also documented one time events like supernovae.
+                </p>
+                <p class="paragraph">
+                    In the medieval Islamic world, the earliest observatories were created as institutes for recording celestial events and documenting stars.
+                    They created multiple instruments like celestial globes and astrolabes to help their work.
+                </p>
+                <p class="paragraph">
+                    Significant advancements in the understanding of stars were made in the twentieth century, in particular their compositons, star classification of spectral types and evolution of stars.
+                </p>
+                <h2 class="paragraphheader" id="LifeCycle">Life cycle</h2>
+                <p class="paragraph">
+                    Stars form in vast clouds of gas and dust called nebulae.
+                    Gravity pulls the gas together, forming a protostar. As the protostar grows, nuclear fusion begins, and a star is born.
+                    Usually, a protoplanetary disc forms around protostars, which would eventually create other smaller objects around the star.
+                </p>
+                <p class="paragraph">
+                    Most of a star’s life is spent in the main sequence phase, where it fuses hydrogen into helium.
+                    During that time, stars emit gases known as stellar winds.
+                </p>
+                <p class="paragraph">
+                    After exhausting their hydrogen in their cores, smaller stars begin to fuse helium.
+                    They expand into red giants, which shed their outer layers into outer space.
+                    This process continues until depleting its helium core, leaving behind a white dwarf.
+                    Most of the star's mass before the post-main sequence events is dispersed, creating a planetary nebula.
+                    This new material eventually creates a new generation of stars.
+                </p>
+                <p class="paragraph">
+                    Massive stars of 9 M☉ turn first into blue and later red supergiants.
+                    These stars begin to fuse heavier elements - helium, carbon, and so on, until they reach iron, which does not emit energy on fusion.
+                    After their cores become too heavy to sustain their own weights, they collapse and after electron capture (protons and electrons collide to produce neutrons and neutrinos) they burst in violent supernovae, leaving behind neutron stars or black holes.
+                </p>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
                 <p class="paragraph">
                     Stars are classified based on their spectral characteristics. 
@@ -58,6 +96,9 @@ link: star
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
+                    <li>
+                        <a href="https://science.nasa.gov/universe/stars/">https://science.nasa.gov/universe/stars/</a>
+                    </li>
                     <li>
                         <a href="https://en.wikipedia.org/wiki/Star">https://en.wikipedia.org/wiki/Star</a>
                     </li>
